--- a/scss/index.scss
+++ b/scss/index.scss
@@ -714,6 +714,8 @@ path {
 }
 
 .detailsPanel__profileImage {
+    $boxShadow: 0 2px 8px rgba(#584F8E, 0.4), 0 4px 24px rgba(#584F8E,.05);
+    position: relative;
     max-width: var(--profileImageSize);
     height: var(--profileImageSize);
     max-width: var(--profileImageSize);
@@ -726,7 +728,60 @@ path {
     background-repeat: no-repeat;
     background-position: center;
     // box-shadow: 0 0 0 8px var(--brand_lighter);
-    box-shadow: 0 2px 8px rgba(#584F8E, 0.4), 0 4px 24px rgba(#584F8E,.05)
+    box-shadow: $boxShadow;
+    transition: all $detailsRevealTiming ease-out;
+
+    .iconButton {
+        right: 8px;
+        bottom: 8px;
+        visibility: hidden;
+        opacity: 0;
+        display: none;
+        pointer-events: none;
+        z-index: 1;
+    }
+
+    input[type="file"] {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        opacity: 0;
+        width: 100%;
+        z-index: 2;
+        visibility: hidden;
+        opacity: 0;
+        display: none;
+        pointer-events: none;
+
+        &:hover {
+            cursor: pointer;
+        }
+    }
+
+    &.editing {
+        transform: scale(1.2);
+
+        &:hover {
+            box-shadow: $boxShadow, 0 0 0 8px rgba(white, .25);
+        }
+
+        input[type="file"],
+        .iconButton {
+            visibility: visible;
+            display: unset;
+            pointer-events: unset;
+        }
+
+        .iconButton {
+            opacity: 1;
+        }
+
+        & + .detailsPanel__firstName {
+            opacity: 0;
+        }
+    }
 }
 
 // .detailsEditInput__profile_photo {
@@ -1084,6 +1139,18 @@ input[name*="profile_photo"] {
     #familyTree {
         width: 100%;
     }
+
+    // #familyTree__list {
+    //     table tr td {
+    //         display: none;
+
+    //         &:first-child ,
+    //         &:last-child,
+    //         .profile__image{
+    //             display: table-cell;
+    //         }
+    //     }
+    // }
 
     #detailsPanel {
         left:0;
@@ -1840,6 +1907,12 @@ button,
 .u-p_fixed {
     position: fixed;
 }
+.u-p_absolute {
+    position: absolute;
+}
+.u-p_relative {
+    position: relative;
+}
 
 .u-bold {
     font-weight: bold;
@@ -1855,10 +1928,6 @@ button,
 
 .u-pe_none {
     pointer-events: none;
-}
-
-.u-p_absolute {
-    position: absolute;
 }
 
 .u-visibility_hidden {
@@ -2206,13 +2275,17 @@ button,
 .u-o_75 {
     opacity: .75;
 }
-
 .u-o_50 {
     opacity: .5;
 }
-
+.u-o_35 {
+    opacity: .35;
+}
 .u-o_25 {
     opacity: .25;
+}
+.u-o_0 {
+    opacity: 0;
 }
 
 .u-remove-link-style {
